docs/spec/grammar/conformance/accept/01-minimal-nodule.myc
// exercises: colony header + use import
colony signals.demo

use core.binary
