docs/spec/grammar/conformance/reject/01-no-colony-header.myc
// rejected: a program must open with a colony header; a bare item is not a program
use core.binary
